--- a/2024.md
+++ b/2024.md
@@ -1,24 +1,31 @@
 ## Events > [Speakers](speakers.md)
 ---
 
-# Events / 2024 / [2023](/2023.md) / [2022](/2022.md) / [2021](/2021.md) / [2020](/2020.md) / [2019](/2019.md) / [2018](/2018.md) / [2017](/2017.md) / [2016](/2016.md) / [2015](/2015.md) / [2014](/2014.md) / [2013](/2013.md) / [2012](/2012.md) / [2011](/2011.md) / [2010](/2010.md) / [2009](/2009.md) / [2008](/2008.md) 
+# Events / [2025](/2025.md) / 2024 / [2023](/2023.md) / [2022](/2022.md) / [2021](/2021.md) / [2020](/2020.md) / [2019](/2019.md) / [2018](/2018.md) / [2017](/2017.md) / [2016](/2016.md) / [2015](/2015.md) / [2014](/2014.md) / [2013](/2013.md) / [2012](/2012.md) / [2011](/2011.md) / [2010](/2010.md) / [2009](/2009.md) / [2008](/2008.md) 
 
-## Tbilisi A11Y &amp; UX Day - Nov 02 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;TRn2gNBKZgg)
+## Tbilisi JS Meetup 4 - Dec 14 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvcqCnXTUJkao2Ut7ArX6QDh)
 | | | |
 | --- | :---: | --- |
-| State of a11y  |  [Вадим Макеев](speakers/Вадим%20Макеев.md)  |    |
-| Спидран по доступности  |  [Максим Хализов](speakers/Максим%20Хализов.md)  | [:notebook:](https://docs.google.com/presentation/d/1cOaSTntFbgmohVTO6drP0FU4HzrQ2PT_rkqkQtYyCUE/edit?usp=drivesdk)   |
-| Доступность и типографика  |  [Татьяна Фокина](speakers/Татьяна%20Фокина.md)  | [:notebook:](https://tatianafokina.github.io/talks/a11y-and-typography/)   |
-| Очень интересно, ничего не понятно, или про доступность как декомпозицию сложности  |  [Андрей Евдоков](speakers/Андрей%20Евдоков.md)  | [:notebook:](https://t.me/tbilisi_js_chat/12128)   |
-| Что вообще такое этот ваш UX  |  [Илона Саркисова](speakers/Илона%20Саркисова.md)  | [:notebook:](https://www.figma.com/proto/oKCSJK2wLRj0sPmGqzRjRA/Decks?page-id=1289%3A121&node-id=1289-122&scaling=scale-down-width&content-scaling=fixed&t=ayjbhNiupwdVPazx-1)   |
-| Доступность на примере индустрии глиняных горшков  |  [Филипп Барановский](speakers/Филипп%20Барановский.md)  | [:notebook:](https://t.me/tbilisi_js_chat/12147)   |
-## Tbilisi JS Meetup 3 - Oct 31 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;utg5WbzlN80)
+| [Echoes of Exclusion: от исследования проблемы предвзятостей Generative AI до инсталляции](https://youtu.be/ymr5AXlqPOI)  |  [Анна Кострица](speakers/Анна%20Кострица.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
+| [Браузер как платформа для «тяжелых» приложений](https://youtu.be/Wl_LJFzmXwk)  |  [Денис Ильин](speakers/Денис%20Ильин.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
+| [Как писать текст в интерфейсе без UX-редактора](https://youtu.be/f2_NFLtOmSo)  |  [Лера Яковлева](speakers/Лера%20Яковлева.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
+| [Infrastructure as TypeScript](https://youtu.be/uYJAA16EuQ4)  |  [Кирилл Казаков](speakers/Кирилл%20Казаков.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
+## Tbilisi A11Y &amp; UX Day - Nov 02 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvexNfKtYxPaZWSGP4M9uA81)
 | | | |
 | --- | :---: | --- |
-| Дебаг производительности страницы средствами браузера  |  [Никита Дубко](speakers/Никита%20Дубко.md)  | [:notebook:](https://t.me/tbilisi_js_chat/11885)   |
-| Дизайн-система — это не про дизайн, а про взаимодействие  |  [Егор Нечаев](speakers/Егор%20Нечаев.md)  | [:notebook:](https://t.me/tbilisi_js_chat/11886)   |
-| Управляем флотом промышленных батарей с помощью SPA на React  |  [Виктор Истомин](speakers/Виктор%20Истомин.md)  | [:notebook:](https://t.me/tbilisi_js_chat/11896)   |
-| Как разработчик может помочь расти своему тимлиду  |  [Тимур Гафиулин](speakers/Тимур%20Гафиулин.md)  | [:notebook:](https://tgafiulin.github.io/openconf_2024/)   |
+| [State of a11y](https://youtu.be/gMwS69xVmRE)  |  [Вадим Макеев](speakers/Вадим%20Макеев.md)  |    |
+| [Спидран по доступности](https://youtu.be/QJz1uIO4QKk)  |  [Максим Хализов](speakers/Максим%20Хализов.md)  | [:notebook:](https://docs.google.com/presentation/d/1cOaSTntFbgmohVTO6drP0FU4HzrQ2PT_rkqkQtYyCUE/edit?usp=drivesdk)   |
+| [Доступность и типографика](https://youtu.be/F64bGVrI4TY)  |  [Татьяна Фокина](speakers/Татьяна%20Фокина.md)  | [:notebook:](https://tatianafokina.github.io/talks/a11y-and-typography/)   |
+| [Очень интересно, ничего не понятно, или про доступность как декомпозицию сложности](https://youtu.be/IDGvUb9hZJ4)  |  [Андрей Евдоков](speakers/Андрей%20Евдоков.md)  | [:notebook:](https://t.me/tbilisi_js_chat/12128)   |
+| [Что вообще такое этот ваш UX](https://youtu.be/SjWrAjTWVQI)  |  [Илона Саркисова](speakers/Илона%20Саркисова.md)  | [:notebook:](https://www.figma.com/proto/oKCSJK2wLRj0sPmGqzRjRA/Decks?page-id=1289%3A121&node-id=1289-122&scaling=scale-down-width&content-scaling=fixed&t=ayjbhNiupwdVPazx-1)   |
+| [Доступность на примере индустрии глиняных горшков](https://youtu.be/IyyrhIX3Bxg)  |  [Филипп Барановский](speakers/Филипп%20Барановский.md)  | [:notebook:](https://t.me/tbilisi_js_chat/12147)   |
+## Tbilisi JS Meetup 3 - Oct 31 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvd0LmFiMG30orojP_kTalhL)
+| | | |
+| --- | :---: | --- |
+| [Дебаг производительности страницы средствами браузера](https://youtu.be/CBi-ycq3tuo)  |  [Никита Дубко](speakers/Никита%20Дубко.md)  | [:notebook:](https://t.me/tbilisi_js_chat/11885)   |
+| [Дизайн-система — это не про дизайн, а про взаимодействие](https://youtu.be/mu2KOGv-sus)  |  [Егор Нечаев](speakers/Егор%20Нечаев.md)  | [:notebook:](https://t.me/tbilisi_js_chat/11886)   |
+| [Управляем флотом промышленных батарей с помощью SPA на React](https://youtu.be/O9Rid_RNJPE)  |  [Виктор Истомин](speakers/Виктор%20Истомин.md)  | [:notebook:](https://t.me/tbilisi_js_chat/11896)   |
+| [Как разработчик может помочь расти своему тимлиду](https://youtu.be/qEELxhmZT6k)  |  [Тимур Гафиулин](speakers/Тимур%20Гафиулин.md)  | [:notebook:](https://tgafiulin.github.io/openconf_2024/)   |
 ## A?.Frontend Day - Sep 21 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;ll4r4ofzN_A)
 | | | |
 | --- | :---: | --- |
@@ -58,7 +65,7 @@
 | Рефакторинг как процесс, который работает сам по себе  |  [Константин Логиновских](speakers/Константин%20Логиновских.md)  |    |
 | effector - проектирование бизнес-логики  |  [Андрей Поповский](speakers/Андрей%20Поповский.md)  |    |
 | И снова микрофронтенды  |  [Герман Панов](speakers/Герман%20Панов.md)  |    |
-## Tbilisi JS Conf 2024 - Jun 01 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;gDP3WcDVImo)
+## Tbilisi JS Conf 2024 - Jun 01 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvc3usYK9ixCP_jK0tOswZGn)
 | | | |
 | --- | :---: | --- |
 | Dial &quot;M&quot; for Maintainability. Part 2  |  [Азат Давлятшин](speakers/Азат%20Давлятшин.md)  | [:notebook:](https://azatdavliatshin.github.io/dial-m-for-maintainability-part-2/)   |
@@ -77,6 +84,12 @@
 | [Статический анализ зависимостей](https://youtu.be/-A1sxEdFUIw)  |  [Алексей Охрименко](speakers/Алексей%20Охрименко.md)  |    |
 | [Как жить с монорепой](https://youtu.be/whpEE9uotb8)  |  [Алексей Николаев](speakers/Алексей%20Николаев.md)  |    |
 | [Как перевести 45 приложений на webpack module federation](https://youtu.be/3PjNrkfSbtQ)  |  [Степан Иваньков](speakers/Степан%20Иваньков.md)  |    |
+## Tbilisi JS Meetup 2 - Mar 28 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvfOTw356-fiYJILYFm9VfmL)
+| | | |
+| --- | :---: | --- |
+| Динамические окружения во фронтенде  |  [Иракли Бахтадзе](speakers/Иракли%20Бахтадзе.md)  |    |
+| Современные UI kit  |  [Александр Попов](speakers/Александр%20Попов.md)  |    |
+| [Еще один способ локализовывать вебсайты](https://youtu.be/JH7cvKIzZdk)  |  [Дмитрий Шмаков](speakers/Дмитрий%20Шмаков.md)  |    |
 ## A?.Frontend Community 6 - Mar 21 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;0Sp-lSYF4nI)
 | | | |
 | --- | :---: | --- |
@@ -98,10 +111,10 @@
 | Сквозь время: ускоряем автотесты  |  [Всеволод Золотов](speakers/Всеволод%20Золотов.md)  |    |
 | Генерация http-клиента с помощью swagger-codegen  |  [Павел Гонзалес](speakers/Павел%20Гонзалес.md)  |    |
 | Мы не зависим от бэкенда  |  [Дмитрий Смирнов](speakers/Дмитрий%20Смирнов.md)  |    |
-## Tbilisi JS Meetup 1 - Jan 25 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;ZO3aPtUoB6Y)
+## Tbilisi JS Meetup 1 - Jan 25 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvfT3dBvG-1kXk11raKlMxlH)
 | | | |
 | --- | :---: | --- |
-| Зачем фронтенд в биотехе?  |  [Мария Кондаурова](speakers/Мария%20Кондаурова.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2373)   |
-| Dial M for Maintainability (Part 1)  |  [Азат Давлятшин](speakers/Азат%20Давлятшин.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)   |
-| Для чего нам может быть нужен cloud serverless во фронтенде?  |  [Антон Павлов](speakers/Антон%20Павлов.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2374)   |
-| Дока друг для друга  |  [Татьяна Фокина](speakers/Татьяна%20Фокина.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)   |
+| [Зачем фронтенд в биотехе?](https://www.youtube.com/watch?v=CKe7MQg8Mrc)  |  [Мария Кондаурова](speakers/Мария%20Кондаурова.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2373)   |
+| [Dial M for Maintainability (Part 1)](https://www.youtube.com/watch?v=4AqRsCX6GGw)  |  [Азат Давлятшин](speakers/Азат%20Давлятшин.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)   |
+| [Для чего нам может быть нужен cloud serverless во фронтенде?](https://www.youtube.com/watch?v=wNqhaK2rdSc)  |  [Антон Павлов](speakers/Антон%20Павлов.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2374)   |
+| [Дока друг для друга](https://www.youtube.com/watch?v=Zhlfia_l-bc)  |  [Татьяна Фокина](speakers/Татьяна%20Фокина.md)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)   |
