--- a/speakers/Александр Коротаев.md
+++ b/speakers/Александр Коротаев.md
@@ -3,6 +3,10 @@
 
 # Александр Коротаев
 
+## Почему тени в браузере выглядят как из 2007-го?
+- 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/Zi9u3sw5JgY)  | [:notebook:](https://lekzd.github.io/presentations/2007-shadows-tbilisi/)  
+## Генеративное искусство на JS
+- 2025 Feb 22 -- [Tbilisi JS Meetup 5](https://www.youtube.com/watch?v=JxBbe26uE-M)    
 ## Геймдев на ChatGPT
 - 2024 Jun 08 -- [Я 💛 Фронтенд 2024](https://youtu.be/XXdbSoTxrAs)    
 ## Зачем мы делаем сообщества?
