--- a/speakers/Иван Акулов.md
+++ b/speakers/Иван Акулов.md
@@ -3,6 +3,8 @@
 
 # Иван Акулов
 
+## Когда оптимизации работают против вас
+- 2025 Apr 11 -- [Tbilisi Web Performance Day](https://youtu.be/JgQsElXk5BM)  | [:notebook:](https://t.me/tbilisi_js/388)  
 ## Наностол: открытый стол о границе между полезными и микрооптимизациями
 - 2021 Dec 06-17 -- Podlodka Frontend Crew 3    
 ## Why slow?
