--- a/speakers/Татьяна Фокина.md
+++ b/speakers/Татьяна Фокина.md
@@ -3,9 +3,12 @@
 
 # Татьяна Фокина
 
-## Доступность и типографика
-- 2024 Nov 02 -- Tbilisi A11Y &amp; UX Day  | [:notebook:](https://tatianafokina.github.io/talks/a11y-and-typography/)  
+## Резиновая типографика: магия clamp()
+- 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/kRwLn7iHyD8)  | [:notebook:](https://tatianafokina.github.io/talks/css-clamp-en/)  
 ## Дока друг для друга
-- 2024 Jan 25 -- Tbilisi JS Meetup 1  | [:notebook:](https://t.me/tbilisi_js_chat/2370)  
+- 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/WPJ0N0rISOk)  | [:notebook:](https://tatianafokina.github.io/talks/doka-presentation/)  
+- 2024 Jan 25 -- [Tbilisi JS Meetup 1](https://www.youtube.com/watch?v=Zhlfia_l-bc)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)  
+## Доступность и типографика
+- 2024 Nov 02 -- [Tbilisi A11Y &amp; UX Day](https://youtu.be/F64bGVrI4TY)  | [:notebook:](https://tatianafokina.github.io/talks/a11y-and-typography/)  
 ## Ты ничего не знаешь про alt, %username%
 - 2020 Jan 28 -- [pitera11y_meetup 2](https://www.youtube.com/watch?v=bEj3qur8vjU)  | [:notebook:](https://pitercss.ru/a11y/2/pres/you-dont-know-alt.pdf)  
