--- a/speakers/Тимур Гафиулин.md
+++ b/speakers/Тимур Гафиулин.md
@@ -4,7 +4,7 @@
 # Тимур Гафиулин
 
 ## Как разработчик может помочь расти своему тимлиду
-- 2024 Oct 31 -- Tbilisi JS Meetup 3  | [:notebook:](https://tgafiulin.github.io/openconf_2024/)  
+- 2024 Oct 31 -- [Tbilisi JS Meetup 3](https://youtu.be/qEELxhmZT6k)  | [:notebook:](https://tgafiulin.github.io/openconf_2024/)  
 ## Базовые принципы самопомощи, или почему опытному разработчику нужно стать наставником
 - 2024 Jul 11 -- [MoscowJS 60](https://youtu.be/VSVHXEuoYbI)    
 ## Как развиваться через наставничество?
