--- a/2018.md
+++ b/2018.md
@@ -1,7 +1,7 @@
 ## Events > [Speakers](speakers.md)
 ---
 
-# Events / [2024](/2024.md) / [2023](/2023.md) / [2022](/2022.md) / [2021](/2021.md) / [2020](/2020.md) / [2019](/2019.md) / 2018 / [2017](/2017.md) / [2016](/2016.md) / [2015](/2015.md) / [2014](/2014.md) / [2013](/2013.md) / [2012](/2012.md) / [2011](/2011.md) / [2010](/2010.md) / [2009](/2009.md) / [2008](/2008.md) 
+# Events / [2025](/2025.md) / [2024](/2024.md) / [2023](/2023.md) / [2022](/2022.md) / [2021](/2021.md) / [2020](/2020.md) / [2019](/2019.md) / 2018 / [2017](/2017.md) / [2016](/2016.md) / [2015](/2015.md) / [2014](/2014.md) / [2013](/2013.md) / [2012](/2012.md) / [2011](/2011.md) / [2010](/2010.md) / [2009](/2009.md) / [2008](/2008.md) 
 
 ## pitercss_meetup 27 - Dec 25 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLTdS5E3zupkG1FiiFbvSR2MXNPYcHxDsE)
 | | | |
@@ -1265,7 +1265,7 @@
 | [Introduction to Micro Frontends](https://youtu.be/LH3QoDWAD8k) [en] |  [Ivan Jovanovic](speakers/Ivan%20Jovanovic.md)  | [:notebook:](https://speakerdeck.com/ivanjov/introduction-to-micro-frontends-rsconf-minsk-2018)   |
 | [Пробуем Flow в бою](https://youtu.be/xSHPFcdVj2A)  |  [Александр Шушунов](speakers/Александр%20Шушунов.md)  | [:notebook:](https://drive.google.com/file/d/1mo8uXoxKsk1Dsj5kYI69DrQucuZcV_AP/view)   |
 | [How to hack a node app?](https://youtu.be/_P5aiH1RLOI) [en] |  [Asim Hussain](speakers/Asim%20Hussain.md)  | [:notebook:](https://speakerdeck.com/jawache/how-to-hack-a-node-app-at-rollingscopes-2018-in-minsk-belarus)   |
-| [Что не так с мобильным вебом](https://youtu.be/5aNhBdyv9-4)  |  [Денис Ильин](speakers/Денис%20Ильин.md)  | [:notebook:](https://www.dropbox.com/s/ea1d464ozfwazik/%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20%D0%98%D0%BB%D1%8C%D0%B8%D0%BD%20-%20%D0%A7%D1%82%D0%BE%20%D0%BD%D0%B5%20%D1%82%D0%B0%D0%BA%20%D1%81%20%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%BC%20%D0%B2%D0%B5%D0%B1%D0%BE%D0%BC%20RSConf.pdf?dl=0)   |
+| [Что не так с мобильным вебом?](https://youtu.be/5aNhBdyv9-4)  |  [Денис Ильин](speakers/Денис%20Ильин.md)  | [:notebook:](https://www.dropbox.com/s/ea1d464ozfwazik/%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20%D0%98%D0%BB%D1%8C%D0%B8%D0%BD%20-%20%D0%A7%D1%82%D0%BE%20%D0%BD%D0%B5%20%D1%82%D0%B0%D0%BA%20%D1%81%20%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%BC%20%D0%B2%D0%B5%D0%B1%D0%BE%D0%BC%20RSConf.pdf?dl=0)   |
 | [Journey through VR and AR with React](https://youtu.be/2G6Eo6Z9n9I) [en] |  [Tomasz Łakomy](speakers/Tomasz%20Łakomy.md)  | [:notebook:](https://tlakomy.github.io/react-vr-ar/#/)   |
 | [How to make mobile web apps better with Web APIs](https://youtu.be/AlRCcx5g3L4)  |  [Тимофей Лавренюк](speakers/Тимофей%20Лавренюк.md)  |    |
 | [Rock’n’scroll](https://youtu.be/oBkcozjgtuA)  |  [Анна Селезнёва](speakers/Анна%20Селезнёва.md)  | [:notebook:](http://askd.rocks/pres/scroll/)   |
