--- a/speakers/Азат Давлятшин.md
+++ b/speakers/Азат Давлятшин.md
@@ -3,7 +3,9 @@
 
 # Азат Давлятшин
 
+## major.minor.patch без головной боли
+- 2025 Jun 14 -- [Tbilisi JS Meetup 6](https://youtu.be/IrP3x7qz0XQ)  | [:notebook:](https://t.me/tbilisi_js/473)  
 ## Dial &quot;M&quot; for Maintainability. Part 2
 - 2024 Jun 01 -- Tbilisi JS Conf 2024  | [:notebook:](https://azatdavliatshin.github.io/dial-m-for-maintainability-part-2/)  
 ## Dial M for Maintainability (Part 1)
-- 2024 Jan 25 -- Tbilisi JS Meetup 1  | [:notebook:](https://t.me/tbilisi_js_chat/2370)  
+- 2024 Jan 25 -- [Tbilisi JS Meetup 1](https://www.youtube.com/watch?v=4AqRsCX6GGw)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)  
