--- a/speakers/Андрей Евдоков.md
+++ b/speakers/Андрей Евдоков.md
@@ -4,4 +4,4 @@
 # Андрей Евдоков
 
 ## Очень интересно, ничего не понятно, или про доступность как декомпозицию сложности
-- 2024 Nov 02 -- Tbilisi A11Y &amp; UX Day  | [:notebook:](https://t.me/tbilisi_js_chat/12128)  
+- 2024 Nov 02 -- [Tbilisi A11Y &amp; UX Day](https://youtu.be/IDGvUb9hZJ4)  | [:notebook:](https://t.me/tbilisi_js_chat/12128)  
