--- a/speakers/Анна Ширяева.md
+++ b/speakers/Анна Ширяева.md
@@ -3,6 +3,10 @@
 
 # Анна Ширяева
 
+## ИПР — Индивидуальный Путь Рефлексии
+- 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/pGeLThgwtTQ)  | [:notebook:](https://t.me/tbilisi_js_chat/22777)  
+## Три стадии принятия React Compiler
+- 2025 Apr 11 -- [Tbilisi Web Performance Day](https://youtu.be/LMJmFmR3SC8)  | [:notebook:](https://t.me/tbilisi_js/388)  
 ## Никто ничего не читает (на самом деле это не так)
 - 2017 Jun 20-21 -- RS Summer Summit 2017. Minsk    
 ## Кто-то читает тексты в мобильной игре? Опыт World of Tanks Blitz и при чём здесь UX.
