--- a/speakers/Антон Павлов.md
+++ b/speakers/Антон Павлов.md
@@ -4,4 +4,4 @@
 # Антон Павлов
 
 ## Для чего нам может быть нужен cloud serverless во фронтенде?
-- 2024 Jan 25 -- Tbilisi JS Meetup 1  | [:notebook:](https://t.me/tbilisi_js_chat/2374)  
+- 2024 Jan 25 -- [Tbilisi JS Meetup 1](https://www.youtube.com/watch?v=wNqhaK2rdSc)  | [:notebook:](https://t.me/tbilisi_js_chat/2374)  
