--- a/speakers/Вадим Макеев.md
+++ b/speakers/Вадим Макеев.md
@@ -13,7 +13,7 @@
 
 ---
 ## State of a11y
-- 2024 Nov 02 -- Tbilisi A11Y &amp; UX Day    
+- 2024 Nov 02 -- [Tbilisi A11Y &amp; UX Day](https://youtu.be/gMwS69xVmRE)    
 ## А доки где?
 - 2021 Oct 11-12 -- Frontend Conf 2021  | [:notebook:](https://drive.google.com/file/d/13L7OJoN7vFtb-Norj0GddaX1caJUYK0K/view)  
 ## Условно адаптивно
