--- a/speakers/Андрей Мелихов.md
+++ b/speakers/Андрей Мелихов.md
@@ -3,6 +3,8 @@
 
 # Андрей Мелихов
 
+## Эволюция OpenAI API — как это влияет на взаимодействие с AI в продуктах, которые мы разрабатываем
+- 2025 Oct 29 -- Alfa B-day A?.Frontend Meetup    
 ## Нет пароля — нет проблем?
 - 2023 May 21-22 -- HolyJS 2023 Moscow    
 - 2023 Apr 21 -- DUMP2023    
