--- a/speakers/Зар Захаров.md
+++ b/speakers/Зар Захаров.md
@@ -3,6 +3,8 @@
 
 # Зар Захаров
 
+## Dreamcoding или как вернуть искру разработки, на примере трех проектов
+- 2025 Oct 29 -- Alfa B-day A?.Frontend Meetup    
 ## От Mobile First к PWA, или почему стоит вернуться к основам веб-разработки
 - 2024 Jul 11 -- [MoscowJS 60](https://youtu.be/K40lEzsFh0A)    
 ## А нужен ли нам еще Webpack?
