--- a/speakers/Михаил Вовренчук.md
+++ b/speakers/Михаил Вовренчук.md
@@ -3,5 +3,7 @@
 
 # Михаил Вовренчук
 
+## Next.js под нагрузкой
+- 2024 Dec 19 -- A?.Frontend Christmas Party    
 ## OpenID Connect и OAuth2.0
 - 2021 Nov 02-05 -- [HolyJS 2021 Moscow](https://www.youtube.com/watch?v=gZUe4794HV8)    
