--- a/2024.md
+++ b/2024.md
@@ -10,6 +10,13 @@
 | [Браузер как платформа для «тяжелых» приложений](https://youtu.be/Wl_LJFzmXwk)  |  [Денис Ильин](speakers/Денис%20Ильин.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
 | [Как писать текст в интерфейсе без UX-редактора](https://youtu.be/f2_NFLtOmSo)  |  [Лера Яковлева](speakers/Лера%20Яковлева.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
 | [Infrastructure as TypeScript](https://youtu.be/uYJAA16EuQ4)  |  [Кирилл Казаков](speakers/Кирилл%20Казаков.md)  | [:notebook:](https://t.me/tbilisi_js/249)   |
+## MoscowJS 62 - Nov 21 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;ANnijAxNejg)
+| | | |
+| --- | :---: | --- |
+| [Адаптируй это](https://www.youtube.com/watch?v=ANnijAxNejg&t=1269s)  |  [Геннадий Ватитов](speakers/Геннадий%20Ватитов.md)  |    |
+| [1000 и 1 способ оптимизировать медиафайлы](https://www.youtube.com/watch?v=ANnijAxNejg&t=2886s)  |  [Денис Филипкин](speakers/Денис%20Филипкин.md)  |    |
+| [Идеальная команда. Какая она?](https://www.youtube.com/watch?v=ANnijAxNejg&t=5846s)  |  [Александр Ермолов](speakers/Александр%20Ермолов.md)  |    |
+| [1 + 1 ﹥ 2: Парное программирование в реальности](https://www.youtube.com/watch?v=ANnijAxNejg&t=7618s)  |  [Аврора Ренард](speakers/Аврора%20Ренард.md)  |    |
 ## Tbilisi A11Y &amp; UX Day - Nov 02 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PLduqjbnjNUvexNfKtYxPaZWSGP4M9uA81)
 | | | |
 | --- | :---: | --- |
