--- a/speakers/Александр Моргунов.md
+++ b/speakers/Александр Моргунов.md
@@ -3,6 +3,8 @@
 
 # Александр Моргунов
 
+## 10⁸ клеток: алгоритмы и производительность в JavaScript
+- 2025 Sep 25 -- [MoscowJS 68](https://www.youtube.com/live/oWucwxJsqHw?feature=shared&t=6200)  | [:notebook:](https://docs.google.com/presentation/d/1VFFG_WrEO93_KCidsiFU53M-QqePxX01zPU2DRq2giI/edit?slide=id.g37c02664a8c_0_44#slide=id.g37c02664a8c_0_44)  
 ## Копаем глубже в Feature-Sliced Design
 - 2024 Jun 08 -- [Я 💛 Фронтенд 2024](https://youtu.be/M84x3pzDYr0)    
 ## Темная сторона NextJS
