--- a/speakers/Антон Непша.md
+++ b/speakers/Антон Непша.md
@@ -3,5 +3,7 @@
 
 # Антон Непша
 
+## В чём польза LangChain.js
+- 2025 Jul 03 -- [MoscowJS 66](https://www.youtube.com/watch?v=olNXUCZUw7U&t=2154s)  | [:notebook:](https://drive.google.com/file/d/144rIP7vhtvRYSRnsvpNYtCNAZ9apd3on/view?usp=sharing)  
 ## Как устроен LangChain.js и всегда ли он полезен
 - 2025 Jun 14 -- [Tbilisi JS Meetup 6](https://youtu.be/B-jwMKgktc0)  | [:notebook:](https://t.me/tbilisi_js/475)  
