--- a/speakers/Вадим Царегородцев.md
+++ b/speakers/Вадим Царегородцев.md
@@ -3,6 +3,8 @@
 
 # Вадим Царегородцев
 
+## Дискуссия: Стандарты ?&#x3D; коллективное сознательное
+- 2025 May 15 -- MoscowJS 64  | [:notebook:](https://drive.google.com/file/d/1vTyQ0KhHArTdxwlD33Fl4KmaHqWvnsvm/view?usp=sharing)  
 ## Valibot: Runtime валидаторы данны, и места их обитания
 - 2024 Sep 21 -- [A?.Frontend Day](https://www.youtube.com/watch?v=0AWASOj2S2M)    
 ## Мифы о «толстых» клиентах
