--- a/speakers/Константин Логиновских.md
+++ b/speakers/Константин Логиновских.md
@@ -3,5 +3,7 @@
 
 # Константин Логиновских
 
+## Особенности тестирования типов: нужно ли оно вам?
+- 2025 Jul 03 -- [MoscowJS 66](https://www.youtube.com/watch?v=olNXUCZUw7U&t=6881s)  | [:notebook:](https://drive.google.com/file/d/1a1eVo1MnmNY9fMz2YXntWOZY3LW0CChk/view?usp=sharing)  
 ## Рефакторинг как процесс, который работает сам по себе
 - 2024 Jun 06 -- MoscowJS 59    
