--- a/speakers/Никита Сидоров.md
+++ b/speakers/Никита Сидоров.md
@@ -3,6 +3,8 @@
 
 # Никита Сидоров
 
+## Дискуссия: Стандарты ?&#x3D; коллективное сознательное
+- 2025 May 15 -- MoscowJS 64  | [:notebook:](https://drive.google.com/file/d/1vTyQ0KhHArTdxwlD33Fl4KmaHqWvnsvm/view?usp=sharing)  
 ## Прогрессивный Яндекс Маркет: отдаём и оживляем контент по кусочкам
 - 2023 May 27-28 -- [CodeFest 13](https://youtu.be/nN_Aal9BfFg)  | [:notebook:](https://disk.yandex.ru/d/vV-11j_6lml1hQ)  
 ## Выгребаем техдолг из-под ковра
