--- a/speakers/Никита Ульшин.md
+++ b/speakers/Никита Ульшин.md
@@ -3,6 +3,8 @@
 
 # Никита Ульшин
 
+## Предохранители от выгорания, или почему «Устал? Отдохни» не работает
+- 2025 Sep 25 -- [MoscowJS 68](https://www.youtube.com/live/oWucwxJsqHw?feature=shared&t=7977)  | [:notebook:](https://drive.google.com/file/d/17QnadTbbyJ3IVSIy4jEaHxp4Ln7jRW8R/view?usp=sharing)  
 ## Как работать с отказами систем в BFF: основные паттерны отказоустойчивости
 - 2024 Sep 21 -- [A?.Frontend Day](https://www.youtube.com/watch?v=Nh6PIhZBLzI)    
 ## Как забрать всё лучшее из CQRS
