--- a/speakers/Роман Ганин.md
+++ b/speakers/Роман Ганин.md
@@ -3,6 +3,8 @@
 
 # Роман Ганин
 
+## React и функциональные шаблоны. Паттерн FACC.
+- 2025 Sep 25 -- [MoscowJS 68](https://www.youtube.com/live/oWucwxJsqHw?feature=shared&t=3297)  | [:notebook:](https://romanganin.ru/lecture-declarative-jsx-with-facc-moscowjs/#/intro)  
 ## Вы не знаете БЭМ, или Почему БЭМ — пережиток прошлого
 - 2019 May 21 -- pitercss_meetup 32  | [:notebook:](https://pitercss.ru/32/pres/you-dont-know-bem/)  
 ## Дизайн-система. Типографика
