--- a/speakers/Сергей Осипов.md
+++ b/speakers/Сергей Осипов.md
@@ -3,5 +3,7 @@
 
 # Сергей Осипов
 
+## Свой бот — проще, чем кажется
+- 2025 Jul 03 -- [MoscowJS 66](https://www.youtube.com/watch?v=olNXUCZUw7U&t=458s)  | [:notebook:](https://drive.google.com/file/d/1ykPQgH2baaIPF9JopEo6nsUgvm-15WY4/view?usp=sharing)  
 ## Material UI, или как перестать волноваться и перейти на новую библиотеку компонентов
 - 2021 Jun 24 -- [Frontend Mix](https://youtu.be/bVfIEJVNqNU)    
