--- a/2024.md
+++ b/2024.md
@@ -49,6 +49,12 @@
 | [Готовим бизнес-логику с умом](https://www.youtube.com/watch?v=CxzRuIayiVk&t=1885s)  |  [Никита Карпенко](speakers/Никита%20Карпенко.md)  | [:notebook:](https://drive.google.com/file/d/1QjJg8IqY_UfXpQozGdUgbpMCX709HzML/view?usp=drive_link)   |
 | [Безопасность веб-приложений: поиск и решение проблем](https://www.youtube.com/watch?v=CxzRuIayiVk&t=4665s)  |  [Алексей Мацеха](speakers/Алексей%20Мацеха.md)  | [:notebook:](https://drive.google.com/file/d/1Ra5t_Uh4ZlmQtayqOWeStLrAZmACCzbA/view?usp=drive_link)   |
 | [Гайд по краже всех секретов](https://www.youtube.com/watch?v=CxzRuIayiVk&t=6304s)  |  [Александр Князев](speakers/Александр%20Князев.md)  | [:notebook:](https://drive.google.com/file/d/1onttOKZtRa4uTR09N3qFR_nWDMv9M13b/view?usp=drive_link)   |
+## MinskCSS 12 - Aug 07 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PL3uk4LxG9Zzm8vX9HbuWCKuFxAyc8tXov)
+| | | |
+| --- | :---: | --- |
+| [3D-моделирование на CSS](https://youtu.be/r06cu0U1O5g)  |  [Юлия Миоцен](speakers/Юлия%20Миоцен.md)  |  [:octocat:](https://codepen.io/miocene/pen/eYaRgVE)  |
+| [Возможности AI в цифровой доступности](https://youtu.be/gxmrE6_vajo)  |  [Глафира Жур](speakers/Глафира%20Жур.md)  | [:notebook:](https://docs.google.com/presentation/d/1VRO25KQGR0swgAKuUrp67YrQ4VPU--dbfFR9tbfBsgg)   |
+| [What we do in the Shadow (DOM)](https://youtu.be/xBDZAj3ufMQ)  |  [Алексей Назаренко](speakers/Алексей%20Назаренко.md)  | [:notebook:](https://shadow-dom-minskcss.netlify.app/)   |
 ## MoscowJS 60 - Jul 11 
 | | | |
 | --- | :---: | --- |
@@ -111,6 +117,12 @@
 | [Как написать свой linter](https://youtu.be/XHjd0qcuN2U)  |  [Евгений Войтенко](speakers/Евгений%20Войтенко.md)  |    |
 | [Темная сторона NextJS](https://youtu.be/1RHxFJhLrQk)  |  [Александр Моргунов](speakers/Александр%20Моргунов.md)  |    |
 | [UI-кит на веб-компонентах](https://youtu.be/yWvjj4EuV98)  |  [Роман Троицкий](speakers/Роман%20Троицкий.md)  |    |
+## MinskJS 11 - Mar 06 [:movie_camera:](https:&#x2F;&#x2F;www.youtube.com&#x2F;playlist?list&#x3D;PL-whh3wS8xsIida5jJqWh97jLY9eM0hLv)
+| | | |
+| --- | :---: | --- |
+| [Апгрейд браузера с помощью Web Extension API](https://youtu.be/Jsec_FpAnqY)  |  [Александр Селиванов](speakers/Александр%20Селиванов.md)  | [:notebook:](https://drive.google.com/file/d/1ddpzkwWzvk5reFVR7fIwf9aM38yPlQPP/view?usp=sharing)   |
+| [Создание виджетов на iOS с использованием JSX](https://youtu.be/iTnezJhaJN8)  |  [Олег Поздняков](speakers/Олег%20Поздняков.md)  | [:notebook:](https://jag-k.github.io/minskjs11-jsx/)   |
+| [Не учите алгоритмы, они не нужны!*](https://youtu.be/0knPHL2yIiw)  |  [Полина Гуртовая](speakers/Полина%20Гуртовая.md)  | [:notebook:](https://drive.google.com/file/d/15VEr2ZBcFbRPi2yUtg-cIKFgZ5Rh6Umh/view?usp=sharing)   |
 ## MoscowJS 57 - Feb 08 [:movie_camera:](https:&#x2F;&#x2F;youtu.be&#x2F;tXK1YstcJ-M)
 | | | |
 | --- | :---: | --- |
