--- a/speakers/Алексей Назаренко.md
+++ b/speakers/Алексей Назаренко.md
@@ -3,5 +3,9 @@
 
 # Алексей Назаренко
 
+## Да кто такие эти ваши веб-компоненты?!
+- 2025 Mar 19 -- [MinskJS 12](https://youtu.be/gKmDVYaepJs)  | [:notebook:](https://wtf-web-components-minskjs.netlify.app/)  
+## What we do in the Shadow (DOM)
+- 2024 Aug 07 -- [MinskCSS 12](https://youtu.be/xBDZAj3ufMQ)  | [:notebook:](https://shadow-dom-minskcss.netlify.app/)  
 ## HTML: 25 фич, которые сделают ваш сайт удобнее
 - 2023 Apr 19 -- [MinskCSS 10](https://youtu.be/-aeKCwJY6c8)  | [:notebook:](https://html-ux-minskcss.netlify.app/)  
