--- a/speakers/Анастасия Котова.md
+++ b/speakers/Анастасия Котова.md
@@ -3,5 +3,7 @@
 
 # Анастасия Котова
 
+## gyp ERR! Почему падает npm install?
+- 2025 Mar 19 -- [MinskJS 12](https://youtu.be/fYRw6QFXkqw)  | [:notebook:](https://minskjs.github.io/files/slides/%D0%90%D0%BD%D0%B0%D1%81%D1%82%D0%B0%D1%81%D0%B8%D1%8F_%D0%9A%D0%BE%D1%82%D0%BE%D0%B2%D0%B0_-_gyp_ERR.pdf)  
 ## Streams в Node.js: работа с данными в потоке
 - 2021 Dec 06-17 -- Podlodka Frontend Crew 3    
