--- a/speakers/Анна Ширяева.md
+++ b/speakers/Анна Ширяева.md
@@ -3,6 +3,8 @@
 
 # Анна Ширяева
 
+## Frontend-фреймворки: лишь перестав выбирать, мы обретаем свободу
+- 2025 Aug 19 -- [MinskJS 13](https://youtu.be/dYkQj4Jvh_M)  | [:notebook:](https://minskjs.github.io/files/slides/Anna_Shiryaeva_-_Frameworks.pdf)  
 ## ИПР — Индивидуальный Путь Рефлексии
 - 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/pGeLThgwtTQ)  | [:notebook:](https://t.me/tbilisi_js_chat/22777)  
 ## Три стадии принятия React Compiler
