--- a/speakers/Вадим Макеев.md
+++ b/speakers/Вадим Макеев.md
@@ -12,6 +12,8 @@
 | :v:  [https:&#x2F;&#x2F;vk.com&#x2F;pepelsbey](https://vk.com/pepelsbey)
 
 ---
+## Вы не знаете MathML. Почти никто не знает
+- 2025 Apr 16 -- [MinskCSS 13](https://youtu.be/iUgE63fMQ4I)  | [:notebook:](https://minskcss.github.io/minskcss.by.github.io/files/slides/vadim-makeev-nobody-knows-mathml.zip)  
 ## State of a11y
 - 2024 Nov 02 -- [Tbilisi A11Y &amp; UX Day](https://youtu.be/gMwS69xVmRE)    
 ## А доки где?
