--- a/speakers/Василий Ванчук.md
+++ b/speakers/Василий Ванчук.md
@@ -3,6 +3,8 @@
 
 # Василий Ванчук
 
+## System Design для Frontend разработчиков. Что, зачем и как?
+- 2025 Aug 19 -- [MinskJS 13](https://youtu.be/QjqM9ht7T5g)  | [:notebook:](https://vvscode.github.io/public/fe-system-design/fe-system-design.html)  
 ## CLI для кодогенерации своими руками
 - 2018 Aug 16 -- The Rolling Scopes Summer Summit    
 ## Ускорение UI тестов
