--- a/speakers/Глафира Жур.md
+++ b/speakers/Глафира Жур.md
@@ -3,6 +3,8 @@
 
 # Глафира Жур
 
+## Возможности AI в цифровой доступности
+- 2024 Aug 07 -- [MinskCSS 12](https://youtu.be/gxmrE6_vajo)  | [:notebook:](https://docs.google.com/presentation/d/1VRO25KQGR0swgAKuUrp67YrQ4VPU--dbfFR9tbfBsgg)  
 ## А ваш сайт доступен с клавиатуры?
 - 2022 Aug 12 -- [Я ❤ Frontend 2022](https://www.youtube.com/watch?v=z3O8qYmPd58&t=4283s)    
 ## Как протестировать accessibility руками
