--- a/speakers/Евгений Дорошкевич.md
+++ b/speakers/Евгений Дорошкевич.md
@@ -3,5 +3,7 @@
 
 # Евгений Дорошкевич
 
+## Как анимации улучшают пользовательский опыт и увеличивают вовлеченность
+- 2025 Aug 19 -- [MinskJS 13](https://youtu.be/frPZrK5ssgs)  | [:notebook:](https://minskjs.github.io/files/slides/Evgeniy_Doroshkevich_-_Animations.pdf)  
 ## Живой интерфейс: как (и с помощью чего) лучше анимировать веб в 2025?
 - 2025 Jun 14 -- [Tbilisi JS Meetup 6](https://youtu.be/LmcoYBys02k)  | [:notebook:](https://t.me/tbilisi_js/475)  
