--- a/speakers/Полина Гуртовая.md
+++ b/speakers/Полина Гуртовая.md
@@ -3,6 +3,8 @@
 
 # Полина Гуртовая
 
+## Не учите алгоритмы, они не нужны!*
+- 2024 Mar 06 -- [MinskJS 11](https://youtu.be/0knPHL2yIiw)  | [:notebook:](https://drive.google.com/file/d/15VEr2ZBcFbRPi2yUtg-cIKFgZ5Rh6Umh/view?usp=sharing)  
 ## Распутываем браузерные потоки
 - 2023 Jun 10-17 -- [Я ❤ Frontend 2023](https://youtu.be/InDkFI_LwGM)    
 ## Wasmысле?
