--- a/speakers/Татьяна Фокина.md
+++ b/speakers/Татьяна Фокина.md
@@ -5,6 +5,7 @@
 
 ## Резиновая типографика: магия clamp()
 - 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/kRwLn7iHyD8)  | [:notebook:](https://tatianafokina.github.io/talks/css-clamp-en/)  
+- 2025 Apr 16 -- [MinskCSS 13](https://youtu.be/jasV7jll_pY)  | [:notebook:](https://tatianafokina.github.io/talks/css-clamp/)  
 ## Дока друг для друга
 - 2025 Aug 16 -- [Tbilisi JS Meetup 7](https://youtu.be/WPJ0N0rISOk)  | [:notebook:](https://tatianafokina.github.io/talks/doka-presentation/)  
 - 2024 Jan 25 -- [Tbilisi JS Meetup 1](https://www.youtube.com/watch?v=Zhlfia_l-bc)  | [:notebook:](https://t.me/tbilisi_js_chat/2370)  
