--- a/speakers/Юлия Миоцен.md
+++ b/speakers/Юлия Миоцен.md
@@ -3,6 +3,8 @@
 
 # Юлия Миоцен
 
+## 3D-моделирование на CSS
+- 2024 Aug 07 -- [MinskCSS 12](https://youtu.be/r06cu0U1O5g)   | [:octocat:](https://codepen.io/miocene/pen/eYaRgVE) 
 ## Сам себе дизайнер
 - 2021 Oct 11-12 -- Frontend Conf 2021  | [:notebook:](https://drive.google.com/file/d/1kDBQ7C4LPGvsafSZZus2jW7iY6_UOOQQ/view)  
 - 2021 Sep 25-26 -- 404fest 2021    
